--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-#opencv-contrib-python-headless
-opencv-python-handless
+opencv-contrib-python-headless
 tensorflow-cpu==2.5.3
 streamlit==0.65.2
 numpy==1.19.2
